--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
         <section class="visual">
             <ul class="slide">
                 <li>
-                    <img src="img/main_top_slider01.jpg" alt="사람 얼굴 사진">
+                    <img src="img/main_top_slider01.jpg" alt="시간을 멈추는 피부의 힘을 키웁니다.">
                     <div class="txt">
                         <p>시간을 멈추는 <strong>피부의 힘</strong>을 키웁니다.</p>
                         <h1>Heal-Aging</h1>
                     </div>
                 </li>
                 <li>
-                    <img src="img/main_top_slider02.jpg" alt="사람 얼굴 사진">
+                    <img src="img/main_top_slider02.jpg" alt="시간을 이기는 자연스러운 아름다움">
                     <div class="txt">
                         <p>시간을 이기는 <strong>자연스러운 아름다움</strong></p>
                         <h1>Natural-Aging</h1>
                     </div>
                 </li>
                 <li>
-                    <img src="img/main_top_slider03.jpg" alt="사람 얼굴 사진">
+                    <img src="img/main_top_slider03.jpg" alt="결이 다른 과정이 만드는 격이 다른 결과">
                     <div class="txt">
                         <p><strong>결</strong>이 다른 과정이 만드는 <strong>격</strong>이 다른 결과</p>
                         <h1>Anti-Aging</h1>
